--- a/app/src/styles/input.module.css
+++ b/app/src/styles/input.module.css
@@ -3,11 +3,11 @@
 }
 
 .input {
-    width: 100%;
     padding: 10px 10px 20px 10px;
     outline: 0;
     border: 1px solid rgba(105, 105, 105, 0.397);
     border-radius: 10px;
+    width: auto;
 }
 
 .input+.span {
@@ -44,4 +44,8 @@
 .input[type="date"]+.span {
     top: 25px;
     font-size: 0.9em;
+}
+
+.input:disabled {
+    background-color: #b6b5b5;
 }
