--- a/app/src/styles/control-panel/list-users.module.css
+++ b/app/src/styles/control-panel/list-users.module.css
@@ -1,7 +1,14 @@
 .footerBottom {
-    height: 60vh;
+
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+.cards {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 10px;
 }
