--- a/app/src/styles/users/formRegister.module.css
+++ b/app/src/styles/users/formRegister.module.css
@@ -9,7 +9,7 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
-    max-width: 550px;
+    width: 100%;
     background-color: #fff;
     padding: 20px;
     border-radius: 20px;
@@ -66,14 +66,16 @@
 }
 
 .signin .a:hover {
-    text-decoration: underline royalblue;
+    text-decoration: underlines royalblue;
 }
 
 .flex {
     display: flex;
+    justify-content: center;
     width: 100%;
     gap: 6px;
 }
+
 
 .address {
     display: flex;
@@ -94,6 +96,11 @@
 
 .submit:hover {
     background-color: rgb(56, 90, 194);
+}
+
+.textarea {
+    resize: none;
+    height: 100px;
 }
 
 @keyframes pulse {
